# mytop

./: CHANGELOG.md  Cargo.toml  Dockerfile.rust  IMPLEMENTATION.md  Makefile  PERFORMANCE.md  QUICKSTART.md  README.md  README_GPU.md  V2-IMPROVEMENTS.md  V2.1-FEATURES.md  VISUAL_IMPROVEMENTS.md  bench_perf.sh  build.sh  index.html  test_sensors.sh
.github/: COVERAGE.md  CREATE_RELEASE.md  TOPICS.txt
.github/workflows/: nightly.yml  performance.yml  release.yml  rust.yml
dev/bench/: data.js  metrics.md
src/: cli.rs  config.rs  error.rs  export.rs  graphics.rs  main.rs  theme.rs  ui.rs  utils.rs
src/monitor/: battery.rs  cpu.rs  disk.rs  diskio.rs  gpu.rs  memory.rs  mod.rs  network.rs  npu.rs  process.rs  system.rs  temp.rs
