[package]
name = "mytop"
version = "1.0.0"
edition = "2021"
authors = ["Nicolas Pequeux"]
description = "System monitoring dashboard for terminal"
license = "MIT"
keywords = ["system", "monitoring", "top", "dashboard", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "mytop"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
sysinfo = "0.32"
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
